errors found
superpixel.cpp:187:38: error: type
      '__gnu_cxx::__alloc_traits<std::allocator<Couleur>,
      Couleur>::value_type' (aka 'Couleur') does not provide a
      subscript operator
            p[2] = lambda * img[y][x][0];
                            ~~~~~~~~~^~
superpixel.cpp:188:38: error: type
      '__gnu_cxx::__alloc_traits<std::allocator<Couleur>,
      Couleur>::value_type' (aka 'Couleur') does not provide a
      subscript operator
            p[3] = lambda * img[y][x][1];
                            ~~~~~~~~~^~
superpixel.cpp:189:38: error: type
      '__gnu_cxx::__alloc_traits<std::allocator<Couleur>,
      Couleur>::value_type' (aka 'Couleur') does not provide a
      subscript operator
            p[4] = lambda * img[y][x][2];
                            ~~~~~~~~~^~
16 errors generated.
void KMoyenneTest(){
    EnsemblePoints P;
    for(int i=0;i<100;i++){
        double xbiais=0.;
        double ybiais=0.;
        if(i%3==1){
            xbiais = 100.;
            ybiais = 0.;
        }
        if(i%3==2){
            xbiais = 0.;
            ybiais = 100.;
        }
        Point p;
        p.push_back(xbiais + 1.*(rand()%10)-20.);
        p.push_back(ybiais + 1.*(rand()%10)-20.);
        P.push_back(p);
    }

    EnsemblePoints C = {
        {75.,50.}, {50., 75.}, {25., 25.}};

    EnsemblePoints Cout = KMoyenne(P,C,100);
    EnsemblePoints CRef = FAST_KMoyenne(P,C,100);

    for(int i=0; i<2; i++)
    for(int j=0; j<2; j++)
        CHECK( abs( Cout[i][j] - CRef[i][j] ) <= 0.5 );
}

Tests de la fonction distancePoints
Tests de la fonction plusProcheVoisin
Tests de la fonction KMoyenne
Tests de la fonction superPixel
make: *** [Makefile:65: tests] Segmentation fault (core dumped)

#test superpixel
#include <stdexcept>
/** @file
 * Filtre Super Pixel
 **/


#include <cmath>
#include <iostream>
#include <vector>
#include <iostream>
#include <fstream>
using namespace std;

#include "superpixel.hpp"
#include "pgm.hpp"
#include "ppm.hpp"
#include "gris-couleurs.hpp"
#include "image-test.hpp"


void distancePointsTest() {

    CHECK( distancePoints( Point( {2,0,1}), Point( {2,0,1})) == 0);
    CHECK( distancePoints( Point( {1,0,1}), Point( {1,0,0})) == 1);
    CHECK( distancePoints( Point( {2,2,2,2}), Point( {1,1,1,1})) == 2);
}

void plusProcheVoisinTest() {
    CHECK( plusProcheVoisin( Point( {1,0,1}),
                              EnsemblePoints( { Point({2,3,6}), Point({1,0,0}), Point({-1,2,0})}))
        == 1);
}

/** Test du filtre SuperPixel **/
void superPixelTest() {
    // TODO: beaucoup d'étudiants ont eu 128.91
    CHECK( ImageGrisEgal(CouleurAuGris(superPixel( imgTest, 2, 60, 15 )),
              ImageGris( {
                  {128.91, 128.91, 128.91, 128.91},
                  {128.91, 128.91, 128.91, 128.91},
                  {128.91, 128.91, 128.91, 128.91},
                  {128.91, 128.91, 128.91, 128.91}
                  }),
              0.001) );
    cout << "Vérifier que les images obtenues dans 'superpixel/' sont semblables à celles fournies dans 'superpixel/correction/'" << endl;
    ecrirePPM(superPixel(lirePPM("images/Billes.256.ppm"), 1, 30, 25),  "superpixel/Billes.256.ppm");
    ecrirePPM(superPixel(lirePPM("images/Baboon.512.ppm"), 2, 60, 15),  "superpixel/Baboon.512.ppm");
    ecrirePPM(superPixel(lirePPM("images/Willis.512.ppm"  ), 1, 60, 15),  "superpixel/Willis.512.ppm");

    cout << "Proposer des paramètres pour Embryos.512.ppm et House.256.ppm et ajouter des tests ci-dessous" << endl;
    ecrirePPM(superPixel(lirePPM("images/Embryos.512.ppm"  ), 1, 60, 25),  "superpixel/Willis.512.ppm");
    ecrirePPM(superPixel(lirePPM("images/House.256.ppm"  ), 2, 60, 15),  "superpixel/Willis.512.ppm");
}


void KMoyenneTest(){
    EnsemblePoints P;
    for(int i=0;i<100;i++){
        double xbiais=0.;
        double ybiais=0.;
        if(i%3==1){
            xbiais = 100.;
            ybiais = 0.;
        }
        if(i%3==2){
            xbiais = 0.;
            ybiais = 100.;
        }
        Point p;
        p.push_back(xbiais + 1.*(rand()%10)-20.);
        p.push_back(ybiais + 1.*(rand()%10)-20.);
        P.push_back(p);
    }

    EnsemblePoints C = {
        {75.,50.}, {50., 75.}, {25., 25.}};

    EnsemblePoints Cout = KMoyenne(P,C,100);
    EnsemblePoints CRef = FAST_KMoyenne(P,C,100);

    for(int i=0; i<2; i++)
    for(int j=0; j<2; j++)
        CHECK( abs( Cout[i][j] - CRef[i][j] ) <= 0.5 );
}


// Ecrire votre code ici


int main(){
    cerr << "Tests de la fonction distancePoints" << endl;
    distancePointsTest();
    cerr << "Tests de la fonction plusProcheVoisin" << endl;
    plusProcheVoisinTest();
    cerr << "Tests de la fonction KMoyenne" << endl;
    KMoyenneTest();
    cerr << "Tests de la fonction superPixel" << endl;
    superPixelTest();

}
